# yandex-tracker-exporter

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  TODO.md  data-migrate.sh  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: docker.yaml  pypi.yaml  tests.yaml
ansible/: ansible.cfg
ansible/inventory/: hosts.yml
ansible/playbooks/: clickhouse.yml
docs/diagrams/: agile_metrics.drawio
examples/docker/: docker-compose.yml
examples/extended_model/: main.py
examples/serverless/: main.py  requirements.txt
migrations/clickhouse/: 000001_create_table_issues.down.sql  000002_create_table_issue_metrics.up.sql  000003_create_table_issues_changelog.down.sql  000003_create_table_issues_changelog.up.sql  000004_create_view_issues_view.down.sql  000004_create_view_issues_view.up.sql
migrations/v0.1.x/: 000001_create_table_issues.up.sql  000002_create_table_issue_metrics.down.sql  000002_create_table_issue_metrics.up.sql  000003_create_view_issues_view.down.sql  000003_create_view_issues_view.up.sql
tests/: conftest.py  test_config.py  test_etl.py  test_helpers.py  test_state.py
tracker_exporter/: __init__.py  __version__.py  _meta.py  _typing.py  config.py  defaults.py  errors.py  etl.py  exceptions.py  exporter.py  main.py
tracker_exporter/models/: base.py  enums.py  issue.py
tracker_exporter/services/: __init__.py  clickhouse.py  monitoring.py  state.py  tracker.py
tracker_exporter/state/: backends.py  factory.py  managers.py  (+1 more)
(+14 files in other folders)
