[metadata]
name = tracker-exporter
description-file = README

[flake8]
ignore = D203, W503, E722, W605
extend-ignore = E203
exclude =
    ansible,
    scripts,
    docs,
    migrations,
    .git,
    .env,
    build,
    dist,
    venv,
    .eggs,
    tests,
    scripts
    setup.py,
    .example,
    .yaml,
    .vscode
max-complexity = 15
max-line-length = 120

[pylint.message-control]
disable = 
    W0511,
    C0114,
    C0115,
    C0116,
    W1203,
    W0703,
    R0903,
    C0116,
    R0913,
    R0902,
    R1719